Replaced default info with personalized info

--- a/static/index.html
+++ b/static/index.html
@@ -8,18 +8,17 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Philip Guo</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Sahil Bansal</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Philip Guo is an assistant professor of cognitive science at UC San Diego (Go Tritons!). His research spans human-computer interaction, online learning, and computing education.</p>
+	<p>Sahil Bansal is a third year Computer Science undergraduate student at UC San Diego (Go Tritons!). </p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<li>HeliosX</li>
+		<li>Planit Triton</li>
+		<li>Leftovers</li>
 	</ol>
 </body>
 </html>
